# realtime_rust_druid_redpanda

./: docker-compose.yml  druid.env
druid/: Dockerfile
producer/: Cargo.toml  build.rs
producer/src/: lib.rs  main.rs
producer/src/protos/: hackernews.proto
producer/src/supervisors/: hackernews-supervisor.json
