[package]
name = "producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = "0.4.23"
kafka = "0.9.0"
polars = { version = "0.27.2", features = ["parquet", "lazy"] }
prost = "0.11.8"
prost-types = "0.11.8"
