[package]
name = "producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
chrono = "0.4.23"

actix-web = "4"
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
rdkafka = "0.29.0"

polars = { version = "0.27.2", features = ["parquet", "lazy"] }
prost = "0.11.8"
prost-types = "0.11.8"
serde_json = "1.0.94"
schema_registry_converter = { version = "3.1.0", features = ["easy", "proto_raw"] }

[build-dependencies]
prost-build = "0.11.8"
